Can now perform, and save typing actions. Fixed a bug where old tests would click in wrong position. Now saving a test when we are done recording. Did some GUI reorganizing to simply have everything we need (for now) to display the information that is of interest. Created some, and will do some more, information getters in step and action classes to displayt in the gui. We are now saving resolution. Quite some bugfixes. When adding and setting up an action, TT is now minimized during and maximized after.

--- a/src/main/resources/fxcss/ApplicationRootStyleSheet.css
+++ b/src/main/resources/fxcss/ApplicationRootStyleSheet.css
@@ -24,3 +24,33 @@
  }
  
  
+
+.mainViewScrollPane{
+	-fx-background-color:TRANSPARENT;
+	-fx-background-color:black;
+}
+
+.scroll-pane > .viewport {
+   -fx-background-color: transparent;
+}
+
+.scroll-pane {
+   -fx-background-color: transparent;
+}
+
+.testTree .tree-cell {
+    -fx-background-color: #0a0a0a ;
+    -fx-text-fill: #ffffff ;
+}
+
+
+.testTree .tree-cell:selected {
+    -fx-background-color:  #303030;
+    -fx-text-fill: #ffffff ;
+    -fx-font-weight: bold;
+}
+.testTree .tree-cell:hover {
+    -fx-background-color:  ##585858;
+    -fx-text-fill: #ffffff ;
+    -fx-font-weight: bold;
+}
